# MathMorph

./: CMakeLists.txt  MMops.cpp  MMops.h  README.md  main.cpp
MathMorph_CUDA/: CMakeLists.txt  MMops.cu  MMops.cuh  main.cu
MathMorph_seq/: CMakeLists.txt  Erosion.cpp  main.cpp
